// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar correctly filters and sorts results 1`] = `
Array [
  "Canvas • Kibana",
  "Discover • Kibana",
  "Graph • Kibana",
]
`;

exports[`SearchBar correctly filters and sorts results 2`] = `
Array [
  "Discover • Kibana",
  "My Dashboard • Test",
]
`;

exports[`SearchBar only display results from the last search 1`] = `
Array [
  "Visualize • Kibana",
  "Map • Kibana",
]
`;

exports[`SearchBar only display results from the last search 2`] = `
Array [
  "Visualize • Kibana",
  "Map • Kibana",
]
`;

exports[`SearchBar supports keyboard shortcuts 1`] = `
<input
  aria-activedescendant=""
  aria-haspopup="listbox"
  aria-label="Filter options"
  autocomplete="off"
  class="euiFieldSearch euiFieldSearch--fullWidth euiFieldSearch--compressed euiSelectableSearch euiSelectableTemplateSitewide__search"
  data-test-subj="header-search"
  placeholder="Search Elastic"
  type="search"
  value=""
/>
`;
